--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8ee9195",
+   "id": "66178c3e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46065ae",
+   "id": "19b409a6",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ccc333",
+   "id": "7d9593f8",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ecfb66",
+   "id": "5ec36054",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "913972c6",
+   "id": "3de0e5bc",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee93382f",
+   "id": "e0219e62",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d54cdff7",
+   "id": "b09f97d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:13.691140Z",
-     "iopub.status.busy": "2025-01-30T14:09:13.690712Z",
-     "iopub.status.idle": "2025-01-30T14:09:16.636736Z",
-     "shell.execute_reply": "2025-01-30T14:09:16.636094Z"
+     "iopub.execute_input": "2025-01-30T14:11:39.399147Z",
+     "iopub.status.busy": "2025-01-30T14:11:39.398719Z",
+     "iopub.status.idle": "2025-01-30T14:11:42.550741Z",
+     "shell.execute_reply": "2025-01-30T14:11:42.550133Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5adbe6c2",
+   "id": "1daf7492",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d51437f",
+   "id": "16063e60",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8853672a",
+   "id": "aa0a4cea",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1f5027",
+   "id": "9e4e5081",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb3a965b",
+   "id": "c6bdc4b5",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f9e531",
+   "id": "53dc3f94",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9e1963",
+   "id": "65a00449",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6dbb76d",
+   "id": "ef594e02",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9660af3",
+   "id": "c6041314",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:16.638930Z",
-     "iopub.status.busy": "2025-01-30T14:09:16.638530Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.496372Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.495899Z"
+     "iopub.execute_input": "2025-01-30T14:11:42.553186Z",
+     "iopub.status.busy": "2025-01-30T14:11:42.552734Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.593513Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.593000Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f1d5f1",
+   "id": "dcca4ad1",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "031d74da",
+   "id": "5f0a870e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.498096Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.497824Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.501286Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.500789Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.595638Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.595164Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.598794Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.598303Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d636f7",
+   "id": "c25fff44",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc4f5db",
+   "id": "273a80f4",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d992a167",
+   "id": "49acf4ba",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86cfe83d",
+   "id": "70c2c25f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d390b2cf",
+   "id": "fc19eb8e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.502950Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.502791Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.544201Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.543689Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.600534Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.600359Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.645836Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.645287Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cafd1368",
+   "id": "3302b7da",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2608443d",
+   "id": "9a54d5b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.545983Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.545706Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.611077Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.610583Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.647772Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.647569Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.719215Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.718658Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50217e81",
+   "id": "29877bbc",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58166fc5",
+   "id": "feaf76f8",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "88fe0b5e",
+   "id": "19560c4d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.612769Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.612600Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.638831Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.638344Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.721236Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.720901Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.749489Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.748856Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b15ee2",
+   "id": "12b7c11d",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82186bc4",
+   "id": "3719db83",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4896083",
+   "id": "dc9310fd",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf802cd",
+   "id": "099eb91e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9037bcd",
+   "id": "8ec1e446",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "81d30d9d",
+   "id": "3738686d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.640901Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.640548Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.644752Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.644170Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.752045Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.751619Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.755948Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.755313Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26852cde",
+   "id": "fc74cebf",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bb7fb6e2",
+   "id": "5a485586",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.646596Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.646161Z",
-     "iopub.status.idle": "2025-01-30T14:09:18.649096Z",
-     "shell.execute_reply": "2025-01-30T14:09:18.648646Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.757766Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.757402Z",
+     "iopub.status.idle": "2025-01-30T14:11:44.760357Z",
+     "shell.execute_reply": "2025-01-30T14:11:44.759774Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68251a41",
+   "id": "a21962a4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "332b4eaa",
+   "id": "954ab538",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:18.650633Z",
-     "iopub.status.busy": "2025-01-30T14:09:18.650459Z",
-     "iopub.status.idle": "2025-01-30T14:09:21.157499Z",
-     "shell.execute_reply": "2025-01-30T14:09:21.156972Z"
+     "iopub.execute_input": "2025-01-30T14:11:44.762161Z",
+     "iopub.status.busy": "2025-01-30T14:11:44.761827Z",
+     "iopub.status.idle": "2025-01-30T14:11:47.387791Z",
+     "shell.execute_reply": "2025-01-30T14:11:47.387220Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffe97c3",
+   "id": "3313178b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f24cdf",
+   "id": "f01b1633",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e83809",
+   "id": "334723f5",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a263f9ef",
+   "id": "ab69f8a4",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "12876303",
+   "id": "0099b05d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:21.159615Z",
-     "iopub.status.busy": "2025-01-30T14:09:21.159249Z",
-     "iopub.status.idle": "2025-01-30T14:09:21.163006Z",
-     "shell.execute_reply": "2025-01-30T14:09:21.162533Z"
+     "iopub.execute_input": "2025-01-30T14:11:47.390013Z",
+     "iopub.status.busy": "2025-01-30T14:11:47.389443Z",
+     "iopub.status.idle": "2025-01-30T14:11:47.393136Z",
+     "shell.execute_reply": "2025-01-30T14:11:47.392584Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f48c22c79c0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7faff6d076a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b013a5",
+   "id": "876e5c3b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b3c3f4",
+   "id": "f34942cd",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b417ed5",
+   "id": "64bf7dbb",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b593841d",
+   "id": "10f80380",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8b430ee8",
+   "id": "51859d0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:21.164962Z",
-     "iopub.status.busy": "2025-01-30T14:09:21.164552Z",
-     "iopub.status.idle": "2025-01-30T14:09:21.167423Z",
-     "shell.execute_reply": "2025-01-30T14:09:21.166929Z"
+     "iopub.execute_input": "2025-01-30T14:11:47.394912Z",
+     "iopub.status.busy": "2025-01-30T14:11:47.394606Z",
+     "iopub.status.idle": "2025-01-30T14:11:47.397544Z",
+     "shell.execute_reply": "2025-01-30T14:11:47.396936Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1960e3dd",
+   "id": "64249fbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:09:21.169129Z",
-     "iopub.status.busy": "2025-01-30T14:09:21.168792Z",
-     "iopub.status.idle": "2025-01-30T14:09:22.218666Z",
-     "shell.execute_reply": "2025-01-30T14:09:22.218114Z"
+     "iopub.execute_input": "2025-01-30T14:11:47.399188Z",
+     "iopub.status.busy": "2025-01-30T14:11:47.398991Z",
+     "iopub.status.idle": "2025-01-30T14:11:48.466255Z",
+     "shell.execute_reply": "2025-01-30T14:11:48.465692Z"
     }
    },
    "outputs": [
